<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:configChanges="orientation|keyboardHidden"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="8"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_second"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/lightBlue"
        android:textColor="@color/white"
        app:theme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tvState"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/device_state"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btn1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:layout_marginStart="8dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/calibrib"
        android:text="@string/door1"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/calibrib"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:text="@string/door2" />
    <Button
        android:id="@+id/btn3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/calibrib"
        android:visibility="gone"
        android:text="@string/door3" />
    <Button
        android:id="@+id/btn4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/calibrib"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:text="@string/door4" />
    <Button
        android:id="@+id/btn5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/calibrib"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:text="@string/door5" />
    <Button
        android:id="@+id/btn6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/calibrib"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:text="@string/door6" />
    <Button
        android:id="@+id/btn7"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/calibrib"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/door7" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/round_button"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        android:fontFamily="@font/calibrib"
        android:layout_marginTop="8dp"
        android:text="@string/door8" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:indeterminateTint="@color/lightBlue"
        android:indeterminateTintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_second" />

    <TextView
        android:id="@+id/tvNbDoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
